--- a/hello.html
+++ b/hello.html
@@ -1,8 +1,7 @@
 <html>
 <body>
-  <script>
-    //oops
-    console.log("HELLO WORLD!"
+    <script>
+  console.log("HELLO WORLD!");
     </script>
     </body>
     </html>
