--- a/hello.html
+++ b/hello.html
@@ -7,7 +7,7 @@
     </html>
 
 
-cordell@CordellWorld MINGW64 ~/Desktop/Clane/lab-05-javascript (master)
+//cordell@CordellWorld MINGW64 ~/Desktop/Clane/lab-05-javascript (master)
 $ git log
 commit c7120036069dbd276b958fbf223f95d3303fefe6 (HEAD -> master, origin/master)
 Author: Csummors <cordelllane@gmail.com>
@@ -31,4 +31,4 @@ commit dc5587322ced519852f5ee4d8b60563abc0c50c6
 Author: Csummors <cordelllane@gmail.com>
 Date:   Mon Mar 30 19:01:50 2020 -0400
 
-    added a hello file
+    added a hello file//
