--- a/greetings.html
+++ b/greetings.html
@@ -5,7 +5,7 @@
     <<script type="text/javascript">
       var x;
       x = prompt ("What you'r name?")
-      alert("Hi "+x+" and good to see you ")
+      alert("Hi "+x+"  ")
 
 
     </script>
